# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

# Defines a Pigweed group of files that are ignored. This is useful for targets
# or files that do not build in GN but run afoul of the source_is_in_gn_build
# check.
#
# Args:
#   sources: The sources to add to the group.
template("pw_ignore_group") {
  assert(defined(invoker.sources), "pw_ignore_group must specify sources")
  foreach(source, invoker.sources) {
    assert(path_exists(source), "Cannot find source: ${source}")
  }

  group(target_name) {
    sources = invoker.sources
    visibility = []
    not_needed([ "sources" ])
  }
}
