# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("@zephyr//:cc.bzl", "zephyr_cc_library")
load("@zephyr//:cc_test.bzl", "zephyr_cc_test")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_chrono_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)

label_flag(
    name = "config_override",
    build_setting_default = "//pw_build:default_module_config",
)

zephyr_cc_library(
    name = "system_clock",
    hdrs = [
        "public/pw_chrono_zephyr/system_clock_config.h",
        "public/pw_chrono_zephyr/system_clock_constants.h",
        "public/pw_chrono_zephyr/system_clock_inline.h",
        "public_overrides/pw_chrono_backend/system_clock_config.h",
        "public_overrides/pw_chrono_backend/system_clock_inline.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        "//pw_chrono:epoch",
        "//pw_chrono:system_clock.facade",
    ],
)

zephyr_cc_library(
    name = "system_timer",
    srcs = ["system_timer.cc"],
    hdrs = [
        "public/pw_chrono_zephyr/system_timer_inline.h",
        "public/pw_chrono_zephyr/system_timer_native.h",
        "public_overrides/pw_chrono_backend/system_timer_inline.h",
        "public_overrides/pw_chrono_backend/system_timer_native.h",
    ],
    includes = [
        "public",
        "public_overrides",
    ],
    deps = [
        ":system_clock",
        "//pw_chrono:system_clock",
        "//pw_chrono:system_timer.facade",
        "//pw_function",
    ],
)

zephyr_cc_test(
    name = "system_timer_test",
    srcs = ["system_timer_test.cc"],
    deps = [
        ":system_timer",
        "//pw_chrono_zephyr:system_clock",
        "//pw_sync_zephyr:binary_semaphore",
        "//pw_sync_zephyr:timed_thread_notification",
    ],
)
