# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("@zephyr//:cc.bzl", "zephyr_cc_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "Kconfig",
        "docs.rst",
    ],
    prefix = "pw_digital_io_zephyr/",
    target_compatible_with = incompatible_with_mcu(),
)

zephyr_cc_library(
    name = "pw_digital_io_zephyr",
    srcs = ["digital_io.cc"],
    hdrs = ["public/pw_digital_io_zephyr/digital_io.h"],
    implementation_deps = ["//pw_assert:check"],
    strip_include_prefix = "public",
    deps = ["//pw_digital_io"],
)
