# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")
load("//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pw_enum",
    hdrs = ["public/pw_enum/to_string.h"],
    strip_include_prefix = "public",
)

pw_cc_test(
    name = "to_string_test",
    srcs = ["to_string_test.cc"],
    deps = [
        ":pw_enum",
    ],
)

filegroup(
    name = "doxygen",
    srcs = ["public/pw_enum/to_string.h"],
)

sphinx_docs_library(
    name = "docs",
    srcs = [
        "BUILD.bazel",
        "BUILD.gn",
        "CMakeLists.txt",
        "docs.rst",
    ],
    prefix = "pw_enum/",
    target_compatible_with = incompatible_with_mcu(),
)
