# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@sphinxdocs//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

sphinx_docs_library(
    name = "docs",
    srcs = [
        "contributing/design/cpp.rst",
        "contributing/design/index.rst",
        "contributing/design/projects.rst",
        "contributing/development.rst",
        "contributing/index.rst",
        "contributing/testing.rst",
        "docs.rst",
        "guide/bazel/commands.rst",
        "guide/bazel/configuration.rst",
        "guide/bazel/index.rst",
        "guide/bazel/quickstart.rst",
        "guide/bazel/troubleshooting.rst",
        "guide/bazel/usage.rst",
        "guide/bootstrap/editors.rst",
        "guide/bootstrap/index.rst",
    ],
    prefix = "pw_ide/",
    target_compatible_with = incompatible_with_mcu(),
)
