# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# LINT.IfChange
cc_library(
    name = "pw_multibuf",
    hdrs = [
        "public/pw_multibuf/multibuf.h",
        "public/pw_multibuf/observer.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":chunk",
        ":config",
        "//pw_multibuf/v1:multibuf",
        "//pw_multibuf/v1_adapter:multibuf",
        "//pw_multibuf/v2:multibuf",
    ],
)
# LINT.ThenChange(BUILD.gn, CMakeLists.txt)

### Module configuration

label_flag(
    name = "config_override",
    build_setting_default = "//pw_build:default_module_config",
)

# LINT.IfChange
cc_library(
    name = "config",
    hdrs = ["public/pw_multibuf/config.h"],
    strip_include_prefix = "public",
    visibility = ["//pw_multibuf:__subpackages__"],
    deps = [":config_override"],
)

### V1 Libraries

cc_library(
    name = "chunk",
    hdrs = ["public/pw_multibuf/chunk.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        "//pw_multibuf/v1:chunk",
        "//pw_multibuf/v1_adapter:chunk",
    ],
)

cc_library(
    name = "header_chunk_region_tracker",
    hdrs = ["public/pw_multibuf/header_chunk_region_tracker.h"],
    strip_include_prefix = "public",
    deps = [
        ":chunk",
        ":config",
        "//pw_multibuf/v1:header_chunk_region_tracker",
    ],
)

cc_library(
    name = "single_chunk_region_tracker",
    hdrs = ["public/pw_multibuf/single_chunk_region_tracker.h"],
    strip_include_prefix = "public",
    deps = [
        ":chunk",
        ":config",
        "//pw_multibuf/v1:single_chunk_region_tracker",
        "//pw_multibuf/v1_adapter:single_chunk_region_tracker",
    ],
)

cc_library(
    name = "allocator",
    hdrs = ["public/pw_multibuf/allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        ":pw_multibuf",
        "//pw_multibuf/v1:allocator",
        "//pw_multibuf/v1_adapter:allocator",
    ],
)

cc_library(
    name = "allocator_async",
    hdrs = ["public/pw_multibuf/allocator_async.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        "//pw_multibuf:allocator",
        "//pw_multibuf/v1:allocator_async",
    ],
)

cc_library(
    name = "from_span",
    hdrs = ["public/pw_multibuf/from_span.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        ":pw_multibuf",
        "//pw_multibuf/v1:from_span",
        "//pw_multibuf/v1_adapter:from_span",
    ],
)

cc_library(
    name = "simple_allocator",
    hdrs = ["public/pw_multibuf/simple_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":config",
        ":pw_multibuf",
        "//pw_multibuf/v1:simple_allocator",
        "//pw_multibuf/v1_adapter:simple_allocator",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = ["public/pw_multibuf/simple_allocator_for_test.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        ":simple_allocator",
        "//pw_multibuf/v1:testing",
    ],
)

# LINT.ThenChange(BUILD.gn, CMakeLists.txt)

## Docs

filegroup(
    name = "doxygen",
    srcs = [
        "public/pw_multibuf/config.h",
        "//pw_multibuf/v1:doxygen",
        "//pw_multibuf/v1_adapter:doxygen",
        "//pw_multibuf/v2:doxygen",
    ],
)

sphinx_docs_library(
    name = "docs",
    srcs = [
        "code_size.rst",
        "concepts.rst",
        "design.rst",
        "docs.rst",
        "guide.rst",
        "//pw_multibuf/examples:docs",
        "//pw_multibuf/size_report:multibuf_size_report",
    ],
    prefix = "pw_multibuf/",
    target_compatible_with = incompatible_with_mcu(),
)
