# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/module_config.gni")
import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_path") {
  include_dirs = [ "public" ]
  visibility = [ ":*" ]
}

# LINT.IfChange
pw_source_set("pw_multibuf") {
  public_configs = [ ":public_include_path" ]
  public = [
    "public/pw_multibuf/multibuf.h",
    "public/pw_multibuf/observer.h",
  ]
  public_deps = [
    ":chunk",
    ":config",
    "v1:multibuf",
    "v1_adapter:multibuf",
    "v2:multibuf",
  ]
}

# LINT.ThenChange(BUILD.bazel, CMakeLists.txt)

### Module configuration

declare_args() {
  # The build target that overrides the default configuration options for this
  # module. This should point to a source set that provides defines through a
  # public config (which may -include a file or add defines directly).
  pw_multibuf_CONFIG = pw_build_DEFAULT_MODULE_CONFIG
}

# LINT.IfChange
pw_source_set("config") {
  public = [ "public/pw_multibuf/config.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [ pw_multibuf_CONFIG ]
  visibility = [ "./*" ]
}

### V1 Libraries

pw_source_set("chunk") {
  public = [ "public/pw_multibuf/chunk.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":config",
    "v1:chunk",
    "v1_adapter:chunk",
  ]
}

pw_source_set("header_chunk_region_tracker") {
  public = [ "public/pw_multibuf/header_chunk_region_tracker.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":chunk",
    ":config",
    "$dir_pw_multibuf/v1:header_chunk_region_tracker",
  ]
}

pw_source_set("single_chunk_region_tracker") {
  public = [ "public/pw_multibuf/single_chunk_region_tracker.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":chunk",
    ":config",
    "v1:single_chunk_region_tracker",
  ]
}

pw_source_set("allocator") {
  public = [ "public/pw_multibuf/allocator.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":config",
    ":pw_multibuf",
    "v1:allocator",
  ]
}

pw_source_set("allocator_async") {
  public = [ "public/pw_multibuf/allocator_async.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":allocator",
    ":config",
    "v1:allocator_async",
  ]
}

pw_source_set("from_span") {
  public = [ "public/pw_multibuf/from_span.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":config",
    ":pw_multibuf",
    "v1:from_span",
  ]
}

pw_source_set("simple_allocator") {
  public = [ "public/pw_multibuf/simple_allocator.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":allocator",
    ":config",
    ":pw_multibuf",
    "v1:simple_allocator",
  ]
}

pw_source_set("testing") {
  testonly = pw_unit_test_TESTONLY
  public = [ "public/pw_multibuf/simple_allocator_for_test.h" ]
  public_configs = [ ":public_include_path" ]
  public_deps = [
    ":config",
    ":simple_allocator",
    "v1:testing",
  ]
}

# LINT.ThenChange(BUILD.bazel, CMakeLists.txt)

## Test group

pw_test_group("tests") {
  group_deps = [
    "v1:tests",
    "v1_adapter:tests",
    "v2:tests",
  ]
}
